; ModuleID = '/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_list_free.c'
source_filename = "/home/carl/AnghaBench/git/extr_strbuf.c_strbuf_list_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @strbuf_list_free(%struct.strbuf** %0) #0 {
  %2 = alloca %struct.strbuf**, align 8
  %3 = alloca %struct.strbuf**, align 8
  store %struct.strbuf** %0, %struct.strbuf*** %2, align 8
  %4 = load %struct.strbuf**, %struct.strbuf*** %2, align 8
  store %struct.strbuf** %4, %struct.strbuf*** %3, align 8
  br label %5

5:                                                ; preds = %9, %1
  %6 = load %struct.strbuf**, %struct.strbuf*** %3, align 8
  %7 = load %struct.strbuf*, %struct.strbuf** %6, align 8
  %8 = icmp ne %struct.strbuf* %7, null
  br i1 %8, label %9, label %18

9:                                                ; preds = %5
  %10 = load %struct.strbuf**, %struct.strbuf*** %3, align 8
  %11 = load %struct.strbuf*, %struct.strbuf** %10, align 8
  %12 = call i32 @strbuf_release(%struct.strbuf* %11)
  %13 = load %struct.strbuf**, %struct.strbuf*** %3, align 8
  %14 = getelementptr inbounds %struct.strbuf*, %struct.strbuf** %13, i32 1
  store %struct.strbuf** %14, %struct.strbuf*** %3, align 8
  %15 = load %struct.strbuf*, %struct.strbuf** %13, align 8
  %16 = bitcast %struct.strbuf* %15 to %struct.strbuf**
  %17 = call i32 @free(%struct.strbuf** %16)
  br label %5

18:                                               ; preds = %5
  %19 = load %struct.strbuf**, %struct.strbuf*** %2, align 8
  %20 = call i32 @free(%struct.strbuf** %19)
  ret void
}

declare dso_local i32 @strbuf_release(%struct.strbuf*) #1

declare dso_local i32 @free(%struct.strbuf**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
